--- a/JS/JS_loanCalculator/index.html
+++ b/JS/JS_loanCalculator/index.html
@@ -1,7 +1,7 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Javascript Loan Claculator</title>
+	<title>Javascript Loan Calculator</title>
 	<style>
 		.output{
 			font-weight: blod;
@@ -31,7 +31,7 @@
 			<td rowspan=8><canvas id="graph" width="400" height="250"></canvas></td>
 		</tr>
 		<tr>
-			<td>Anual interest(%):</td>
+			<td>Annual interest(%):</td>
 			<td><input id="apr" onchange="calculate();"></input></td>
 		</tr>
 		<tr>
@@ -39,12 +39,12 @@
 			<td><input id="years" onchange="calculate();"></input></td>
 		</tr>
 		<tr>
-			<td>Aipcode (to find lenders):</td>
+			<td>Zipcode (to find lenders):</td>
 			<td><input id="zipcode" onchange="calculate();"></input></td>
 		</tr>
 		<tr>
 			<td>Approximate Payments:</td>
-			<td><button onclick="calculate();"></button></td>
+			<td><button onclick="calculate();">Calculate</button></td>
 		</tr>
 		<tr>
 			<td>Monthly payment:</td>
@@ -60,7 +60,7 @@
 		</tr>
 		<tr>
 			<th>Sponsors:</th>
-			<td colspan=2></td>apply for your loan with one of these fine lenders:
+			<td colspan=2>Apply for your loan with one of these fine lenders:
 			<div id="lenders"></div>
 		</tr>
 
@@ -118,6 +118,108 @@
 					document.getElementById("years").value = localStorage.loan_zipcode;
 				}
 			};
+
+			function getLenders(amount, apr, years, zipcode){
+				if(!window.XMLHttpRequest) return;
+
+				var ad = document.getElementById("lenders");
+				if(!ad) return;
+
+				var url = "getLenders.php" + "?amt=" + endodeURLComponent(amount)+ "&apr=" + endodeURLComponent(apr) + "&yrs=" + endodeURLComponent(years) + "&zip=" + endodeURLComponent(zipcode);
+
+				var req = new XMLHttpRequest();
+				req.open("GET", url);
+				req.send(null);
+
+				req.onreadystatechange = function(){
+					if(req.readyState == 4 && req.status == 200){
+						var response = req.responseText;
+						var lenders = JSON.parse(response);
+
+						var list = "";
+						for(var i = 0; i<lenders.length; i++){
+							list += "<li><a href='"+lenders[i].url + "'>" + lenders[i].name + "</a>";
+						}
+
+						ad.innerHTML = "<url>" + list + "</url>";
+					}
+				}
+			}
+
+			function chart(principal, interest, monthly, payments){
+				var graph = document.getElementById("graph");
+				graph.width = graph.width;
+
+				if(arguments.length == 0 || !graph.getContext) return;
+
+				var g = graph.getContext("2d");
+				var width = graph.width,
+				height = graph.height;
+
+				function paymentTox(n){
+					return n*width/payments;
+				}
+
+				function amountToY(a){
+					return height - (a*height/(monthly*payments*1.05));
+				}
+
+				g.moveTo(paymentTox(0), amountToY(0));
+				g.lineTo(paymentTox(payments),amountToY(monthly*payments));
+				g.lineTo(paymentTox(payments), amountToY(0));
+				g.closePath();
+				g.fillStyle = "#f88";
+				g.fill();
+				g.font = "bold 12px sans-serif";
+				g.fillText("Total Interest Payments", 20,20);
+
+				var equity = 0;
+				g.beginPath();
+				g.moveTo(paymentTox(0), amountToY(0));
+				for(var p = 1; p<= payments; p++){
+					var thisMonthsInterest = (principal - equity)*interest;
+					equity += (monthly - thisMonthsInterest);
+					g.lineTo(paymentTox(p), amountToY(equity));
+				}
+				g.lineTo(paymentTox(payments), amountToY(0));
+				g.closePath;
+				g.fillStyle = "green";
+				g.fill();
+				g.fillText("Total Equity", 20, 35);
+
+				var bal = principal;
+				g.moveTo(paymentTox(0), amountToY(bal));
+				for(var p = 1; p<payments; p++){
+					var thisMonthsInterest = bal*interest;
+					bal -= (monthly - thisMonthsInterest);
+					g.lineTo(paymentTox(p), amountToY(bal));
+				}
+
+				g.lineWidth = 3;
+				g.stroke();
+				g.fillStyle = "black";
+				g.fillText("Loan balance", 20, 50);
+
+				g.textAlign = "center";
+				var y = amountToY(0);
+				for(var year = 1; year*12<= payments; year++){
+					var x = paymentTox(year *12);
+					g.fillRect(x - 0.5, y-3, 1,3);
+					if(year == 1) g.fillText("Year", x, y-5);
+					if(year%5 == 0 && year*12 != payments) g.fillText(String(year), x, y-5);
+				}
+
+				g.textAlign = "right";
+				g.textBaseline = "middle";
+				var ticks = [monthly*payments, principal];
+				var rightEdge = paymentTox(payments);
+				for(var i = 0; i<ticks.length; i++){
+					var y = amountToY(ticks[i]);
+					g.fillRect(rightEdge - 3; y-0.5, 3, 1);
+					g.fillText(String(ticks[i].toFixed(0)), rightEdge -5, y);
+				}
+
+			}
 
 
 		</script>
