Using an ASP.NET Server Running SQL Server
The code above is the same as the previous one.

Only this time the XMLHttpRequest reads data from
"customers_db_sql.aspx".

--- a/W3/demoweb/customers.html
+++ b/W3/demoweb/customers.html
@@ -86,7 +86,7 @@
 
 	<script>
 		var xmlhttp = new XMLHttpRequest();
-		var url = "http://www.w3schools.com/website/customers_db_mysql.php";
+		var url = "http://www.w3schools.com/website/customers_db_sql.aspx";
 
 		xmlhttp.onreadystatechange = function() {
 		    if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
