--- a/iMooc/01.html
+++ b/iMooc/01.html
@@ -6,7 +6,7 @@
 
 	<style>
 		body{margin: 0; padding: 0}
-		.main{width: 800px; height:300px;background: #ccc; margin: 0 }
+		.main{width: 800px; height:300px;background: #ccc; margin: 0 auto }
 	</style>
 </head>
 <body>
