--- a/iMooc/01.html
+++ b/iMooc/01.html
@@ -6,12 +6,19 @@
 
 	<style>
 		body{margin: 0; padding: 0}
-		.main{width: 800px; height:300px;background: #ccc; margin: 0 auto }
+		.top{height: 100px; background: blue;}
+		.main{width: 800px; height:300px;background: #ccc; margin: 0 auto; }
+		.foot{width: 800px; height:100px; background: #900; margin: 0 auto;}
+
+
+
 	</style>
 </head>
 <body>
-
+	
+	<div class="top"></div>
 	<div class="main"></div>
+	<div class="foot"></div>
 
 </body>
 </html>
