双列布局，限宽

--- a/iMooc/02.html
+++ b/iMooc/02.html
@@ -5,14 +5,17 @@
 
 	<style type="text/css">
 		body{margin: 0; padding: 0;}
+		.main{width:800px; margin: 0 auto}
 		.left{width: 20%; height:500px; float:left; background: #333}
 		.right{width: 80%; height:400px; float: right; background: #ddd}
 
 	</style>
 </head>
 <body>
-	<div class="left"></div>
-	<div class="right"></div>
+	<div class="main">
+		<div class="left"></div>
+		<div class="right"></div>
+	</div>
 
 </body>
 </html>
