双列布局，固定宽度

--- a/iMooc/02.html
+++ b/iMooc/02.html
@@ -6,8 +6,8 @@
 	<style type="text/css">
 		body{margin: 0; padding: 0;}
 		.main{width:800px; margin: 0 auto}
-		.left{width: 20%; height:500px; float:left; background: #333}
-		.right{width: 80%; height:400px; float: right; background: #ddd}
+		.left{width: 220px; height:500px; float:left; background: #333}
+		.right{width: 580px; height:400px; float: right; background: #ddd}
 
 	</style>
 </head>
