三列布局，中间列自适应宽度
1. left right middle 取消浮动
2. 为左右 增加position属性为 绝对定位
3. 为中间列设定固定宽度，并且设定margin的孔隙

--- a/iMooc/03.html
+++ b/iMooc/03.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>03buju</title>
+	<meta http-equiv="content-Type" content="text/html" />
 
 	<style>
 		body{margin:0; padding: 0;}
-		.left{width:33.33%; height: 500px; float:left; background:#ccc}
-		.middle{width: 33.33%; height: 500px; float:left; background: #999}
-		.right{width: 33.33%; height: 500px; float:right; background: #ddd}
+		.left{width:200px; height: 500px; /*float:left;*/ background:#ccc; position: absolute; left:0; top: 0}
+		.middle{width:500px; height: 500px;/* float:left;*/ background: red; margin: 0 310px 0 210px; }
+		.right{width: 300px; height: 500px; /*float:right;*/ background: #ddd; position: absolute; right: 0; top: 0}
 
 	</style>
 </head>
