--- a/Udemy/jQuery/index.html
+++ b/Udemy/jQuery/index.html
@@ -9,32 +9,183 @@
  	<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
 	<style>
-		#square{
-			width: 200px;
-			height:200px;
-			background-color: green;
+
+		body{
+			margin:0;
+			padding:0;
+			font-family: "helvetica", sans-serif;
+			font-weight: 300px; 
 		}
 
-		#target{
-			width:300px;
-			height: 300px;
-			background-color: red;
-			border-radius: 150px;
+		#menuBar{
+			width: 100%;
+			height: 40px;
+			background-color: #e0e0e0;
+			border-bottom: 1px solid grey;
+
 		}
+
+		#logo{
+			padding:5px 0 0 20px;
+			font-weight: bold;
+			font-size: 120%;
+			float:left;
+		}
+		#buttonDiv{
+			float:right;
+			padding:5px 10px 0 0;
+		}
+
+		#runButton{
+			font-size: 1.2em;
+		}
+
+		#toggles{
+			width: 200px;
+			margin:0 auto;
+			border-radius: 3px;
+			height: 27px;
+			list-style:none;
+			border:1px solid grey;
+			padding:0;
+			position: relative;
+			top:5px;    
+		}
+
+		#toggles li{
+			float: left;
+			border-right: 1px solid grey;
+			padding:5px 7px;
+		}
+
+		.clear{
+			clear:both;
+		}
+
+		.codeContainer{
+			height:100%;
+			float:left;
+			width: 50%;
+			position:relative;
+		}
+
+		.codeContainer textarea{
+			width: 100%;
+			height: 100%;
+			border:none;
+			border-right: 1px solid grey;
+			font-family: "monotype";
+			font-size: .9em;
+			box-sizing: border-box;
+			padding:5px;
+		}
+		
+		.codeLabel{
+			position:absolute;
+			right:10px;
+			top:10px;
+		}
+
+		#CSSContainer, #JSContainer{
+			display: none;
+		}
+
+		iframe{
+			height: 100%;
+			position: relative;
+			left:20;
+			border:none;
+		}
+
+		.selected{
+			background-color: grey;
+		}
+
+
 	</style>
 
 </head>
 <body>
-	<ul>
-		<li>pizza</li>
-		<li>cat</li>
-		<li>dog</li>
-		<li>chocolate</li>
-	</ul>
+
+	<div id="wrapper">
+		<div id="menuBar">
+			<div id="logo">CodePlayer</div>
+			<div id="buttonDiv">
+				<button id="runButton">Run</button>
+			</div>	
+			<ul id="toggles">
+				<li class="toggle selected" >HTML</li>
+				<li class="toggle">CSS</li>
+				<li class="toggle">JS</li>
+				<li class="toggle selected"  style="border:none;">Result</li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+		<div class="codeContainer" id="HTMLContainer">
+			<div class="codeLabel">HTML</div>
+			<textarea name="" id="htmlCode" cols="30" rows="10">
+				<div id="test">what </div>
+			</textarea>
+		</div>
+
+		<div class="codeContainer" id="CSSContainer">
+			<div class="codeLabel">CSS</div>
+			<textarea name="" id="cssCode" cols="30" rows="10">
+				html {background-color:blue;}
+			</textarea>
+		</div>
+
+		<div class="codeContainer" id="JSContainer">
+			<div class="codeLabel">JS</div>
+			<textarea name="" id="jsCode" cols="30" rows="10">
+
+				alert("haha");
+				document.getElementById("test").innerHTML = "good.";
+			</textarea>
+		</div>
+
+		<div class="codeContainer" id="resultContainer">
+			<div class="codeLabel">Result</div>
+			<iframe id="resultFrame" src="" frameborder="0"></iframe>
+		</div>
+	</div>
 
 
 	<script>
-		$("ul").sortable();
+
+		var windowHeight=$(window).height();
+		var menuBarHeight=$("#menuBar").height();
+		var codeContainerHeight=windowHeight - menuBarHeight;
+
+		$(".codeContainer").height(codeContainerHeight+"px");
+
+
+		$(".toggle").click(function(){
+			$(this).toggleClass("selected");
+
+			var activeDiv=$(this).html();
+			$("#"+activeDiv+"Container").toggle();
+			var showingDivs = $(".codeContainer").filter(function(){
+					return($(this).css("display") != "none");
+			}).length;
+
+			var width=100/showingDivs;
+			$(".codeContainer").css("width",width+"%")
+		});
+
+		$("#runButton").click(function(){
+			$("iframe").contents().find("html").html('<style>'+$("#cssCode").val()+'</style>'+$("#htmlCode").val());
+
+			document.getElementById("resultFrame").contentWindow.eval($("#jsCode").val());
+						
+		});
+
+
+
+
+
+
+		
 	</script>
 
 </body>
