--- a/Udemy/Bootstrap/index.html
+++ b/Udemy/Bootstrap/index.html
@@ -147,6 +147,33 @@
 		</ul>
 	</div>
 
+	<div class="container">
+		<button class="btn btn-success" data-toggle="modal" data-target="#myModal">
+			Lauch Modal
+		</button>
+		<div class="modal" id="myModal">
+			<div class="modal-dialog modal-sm">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button class="close" data-dismiss="modal">x</button>
+						<h4 class="modal-title">My Modal!</h4>
+					</div>
+					<div class="modal-body">
+						What a fantastic modal this is !
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-default" data-dismiss="modal">
+							close
+						</button>
+						<button class="btn btn-success">
+							save changes
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
