--- a/Udemy/Bootstrap/landing.html
+++ b/Udemy/Bootstrap/landing.html
@@ -74,7 +74,7 @@
       }
     </style>
   </head>
-  <body data-spy="sroll" data-target=".navbar-collapse">
+  <body data-spy="scroll" data-target=".navbar-collapse">
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -172,7 +172,7 @@
       
       $(".contentContainer").css("min-height", $(window).height());
 
-      
+
     </script>
 
 
