finish bootstrap learning

--- a/Udemy/Bootstrap/landingPage.html
+++ b/Udemy/Bootstrap/landingPage.html
@@ -23,7 +23,7 @@
       }
 
       #topContainer{
-        background-image: url("backgroud.jpg");
+        background-image: url("background.jpg");
         height:400px;
         width:100%;
         background-size: cover;
