show pics in the container. first pic is the largest

--- a/iMooc/DOM/Lesson1/index.html
+++ b/iMooc/DOM/Lesson1/index.html
@@ -6,6 +6,7 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 	<link rel="stylesheet" type="text/css" href="styles/slidingdoors.css">
+	<script type="text/javascript" src="scripts/slidingdoors.js"></script>
 </head>
 <body>
 <div id="container">
