--- a/iMooc/DOM/Lesson2/domReadyTest.html
+++ b/iMooc/DOM/Lesson2/domReadyTest.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>domReady</title>
+	<script type="text/javascript" src="domReady.js"></script>
 	<script type="text/javascript">
-		window.onload = function(){
+		myReady(function(){
 			document.getElementById("header").style.color="red";
-		}
+		});
 	</script>
 
 </head>
