--- a/iMooc/DOM/Lesson4/example.html
+++ b/iMooc/DOM/Lesson4/example.html
@@ -4,17 +4,33 @@
 	<title>IsElement</title>
 </head>
 <body>
-<div id="test">aaa</div> <!-- this is a comment -->
-<script type="text/javascript">
-	var isElement = function(el){
-		return !!el && el.nodeType ===1;
-	}
-	var a ={
-		nodeType:1
-	}
-	console.log(isElement(document.getElementById("test")));
-	console.log(isElement(document.getElementById("test").nextSibling))
-	console.log(isElement(a));
-</script>
+	<div id="test">aaa</div> <!-- this is a comment -->
+	<script type="text/javascript">
+		var testDiv = document.createElement('div');
+		var isElement = function(obj){
+
+			if(obj && obj.nodeType ===1){
+				if(window.Node && (obj instanceof Node)){
+					return true;
+				}
+				try{
+					testDiv.appendChild(obj);
+					testDiv.removeChild(obj);
+				}catch(e){
+					return false;
+				}
+				return true;
+			}
+			return false;
+		}
+
+		
+		var a ={
+			nodeType:1
+		}
+		console.log(isElement(document.getElementById("test")));
+		console.log(isElement(document.getElementById("test").nextSibling))
+		console.log(isElement(a));
+	</script>
 </body>
 </html>
