--- a/JS_Algorithms/runStack.html
+++ b/JS_Algorithms/runStack.html
@@ -20,7 +20,9 @@
 
 		stackTest.pop();
 		stackTest.pop();
-		console.log(stackTest)
+		console.log(stackTest.size());
+
+		console.log(stackTest);
 
 		stackTest.print();
 	</script>
