test divideBy2 method

--- a/JS_Algorithms/Stack/runStack.html
+++ b/JS_Algorithms/Stack/runStack.html
@@ -5,7 +5,8 @@
 	<script type="text/javascript" src="stack.js"></script>
 </head>
 <body>
-<script type="text/javascript">
+	<!-- test the Stack() method -->
+	<script type="text/javascript">
 
 		var stackTest = new Stack();
 		console.log(stackTest.isEmpty());
@@ -25,6 +26,12 @@
 		console.log(stackTest);
 
 		stackTest.print();
+	</script>
+
+	<!-- test divideBy2 method -->
+	<script type="text/javascript" src="divideBy2.js"></script>
+	<script type="text/javascript">
+		console.log(divideBy2(9.5));
 	</script>
 
 </body>
