added testing with baseConverter mehtod

--- a/JS_Algorithms/Stack/runStack.html
+++ b/JS_Algorithms/Stack/runStack.html
@@ -34,7 +34,11 @@
 		console.log(divideBy2(9.5));
 	</script>
 
-
+	<!-- test baseConverter method -->
+	<script type="text/javascript" src="baseConverter.js"></script>
+	<script type="text/javascript">
+		console.log(baseConverter(100000,16));
+	</script>
 
 </body>
 </html>
