added testing case and bug fixed

--- a/JS_Algorithms/Queue/runQueue.html
+++ b/JS_Algorithms/Queue/runQueue.html
@@ -6,5 +6,16 @@
 </head>
 <body>
 
+	<!-- test queue.js -->
+	<script type="text/javascript"  >
+		var queue = new Queue();
+		console.log(queue.isEmpty());
+		queue.enqueue(5);
+		console.log(queue.isEmpty());
+
+		queue.enqueue(4);
+		queue.dequeue();
+		queue.print();
+	</script>
 </body>
 </html>
