--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<title>Html Starter</title>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 </head>
 <body>
@@ -10,12 +11,8 @@
 	Hello <span id="nameDiv"></span>.
 
 	<script type="text/javascript">
-		var textInputElement = document.getElementById('textInput'),
-		nameDivElement = document.getElementById('nameDiv');
-
-		textInputElement.addEventListener('keyup', function(){
-			var text = textInputElement.value;
-			nameDivElement.innerHTML = text;
+		$('#textInput').on('keyup', function(){
+			$('#nameDiv').html($('#textInput').val());
 		});
 	</script>
 </body>
