--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -1,33 +1,12 @@
 
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
-	<title>Html Starter</title>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-
+	<title>Angular.js Example</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 </head>
 <body>
-	Name: <input id="textInput" type="text"></input><br>
-	Hello <span id="nameDiv"></span>.
-
-	<script type="text/javascript">
-		//model
-		var model = new backbone.Model({
-			name:''
-		});
-
-		//view
-		model.ono('change:name', function(){
-			$('#nameSpan').html(model.get('name'));
-		});
-
-		//controller
-		$('#textInput').on('keyup',function(){
-			model.set('name', $('#textInput').val());
-		});
-	</script>
+	Name: <input ng-model="name" type="text"></input><br>
+	Hello {{name}}.
 </body>
 </html>
