--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 	Name: <input ng-model="name" type="text"></input><br>
+	Name: <input ng-model="name" type="text"></input><br>
+	Name: <input ng-model="name" type="text"></input><br>
 	Hello {{name}}.
 </body>
 </html>
