#9. first name and last name

--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -6,9 +6,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 </head>
 <body>
-	Name: <input ng-model="name" type="text"></input><br>
-	Name: <input ng-model="name" type="text"></input><br>
-	Name: <input ng-model="name" type="text"></input><br>
-	Hello {{name}}.
+	First Name: <input ng-model="firstName" type="text"></input><br>
+	Last Name: <input ng-model="lastName" type="text"></input><br>
+	Hello {{firstName}} {{lastName}}.
 </body>
 </html>
