--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -11,14 +11,23 @@
 
 			$scope.addName = function(){
 				$scope.names.push($scope.enteredName);
-			};
+				$scope.enteredName = "";
+			};	
+
+			$scope.removeName = function(name){
+				var i = $scope.names.indexOf(name);
+				$scope.names.splice(i,1);
+			}
+			
 		});
 	</script>
-</head>
+</head>	
 <body >
 	<div ng-controller="NameCtrl">
 		<ul>
-			<li ng-repeat="name in names">{{name}}</li>
+			<li ng-repeat="name in names">{{name}}
+				<a href="" ng-click="removeName(name)">remove</a>
+			</li>
 		</ul>
 
 		<form ng-submit="addName()">
