--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -21,11 +21,15 @@
 				<th>Country</th>
 				<th>Population</th>
 				<th>Flag</th>
+				<th>Capitcal</th>
+				<th><a href="http://en.wikipedia.org/wiki/list_of_countries_by_GDP_(ppp)">GDP (ppp)</a></th>
 			</tr>
 			<tr ng-repeat="country in countries">
 				<td>{{country.name}}</td>
-				<td>{{country.population}}</td>
+				<td>{{country.population | number}}</td>
 				<td><img ng-src="{{country.flagURL}}" width="100" /> </td>
+				<td>{{country.capital}}</td>
+				<td>{{country.gdp | currency}}</td>
 			</tr>
 		</table>
 
