--- a/Angular50Examples/index.html
+++ b/Angular50Examples/index.html
@@ -4,35 +4,38 @@
 <head>
 	<title>Angular.js Example</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-	<script type="text/javascript">
-		var countryApp = angular.module('countryApp',[]);
-		countryApp.controller('CountryCtrl',function($scope, $http){
+	<script >
+		var countryApp = angular.module('countryApp',['ngRoute']);
+
+		countryApp.config(function($routeProvider){
+			$routeProvider.
+			when('/',{
+				template: '<ul><li ng-repeat="country in countries">{{country.name}}</li><ul>',
+				controller:'CountryListCtrl'
+			}).
+			when('/:countryName',{
+				template:'<h1>TODO create country detail view</h1>',
+				controller: 'CountryDetailCtrl'
+			}).
+			otherwise({
+				redirectTo: '/'
+			});
+		});
+
+		countryApp.controller('CountryListCtrl',function($scope, $http){
 			$http.get('countries.json').success(function(data){
 				$scope.countries = data;
 			});
 		});	
+
+		countryApp.controller('CountryDetailCtrl',function($scope, $routeParams){
+			console.log($routeParams);
+		});
 	</script>
 </head>		
 <body >
-	<div ng-controller="CountryCtrl">
-		search:<input ng-model="query" type="text" /><br>
-		<table>
-			<tr>
-				<th>Country</th>
-				<th>Population</th>
-				<th>Flag</th>
-				<th>Capitcal</th>
-				<th><a href="http://en.wikipedia.org/wiki/list_of_countries_by_GDP_(ppp)">GDP (ppp)</a></th>
-			</tr>
-			<tr ng-repeat="country in countries">
-				<td>{{country.name}}</td>
-				<td>{{country.population | number}}</td>
-				<td><img ng-src="{{country.flagURL}}" width="100" /> </td>
-				<td>{{country.capital}}</td>
-				<td>{{country.gdp | currency}}</td>
-			</tr>
-		</table>
-
+	<div ng-view>
+	
 	</div>	
 </body>
 </html>
